tests/paczka1/fuzzy1/78083294.err
Error in line 4: XVaKXGl S99 14,2
Error in line 6: yP8CQgDKai S478 3,4
Error in line 14: yP8CQgDKai S319 21,1
Error in line 17: yP8CQgDKai S478 53,9
Error in line 18: q9GmJOXti S478 57,9
Error in line 27: yP8CQgDKai S99 11,0
